--- a/src/FH.Cache.Core/Dashboard/Pages/LayoutPage.cshtml
+++ b/src/FH.Cache.Core/Dashboard/Pages/LayoutPage.cshtml
@@ -84,7 +84,7 @@
             </div>
         </div>
         
-        <div id="FH.Cache.CoreConfig"
+        <div id="hangfireConfig"
              data-pollinterval="@DashboardOptions.StatsPollingInterval"
              data-pollurl="@(Url.To("/stats"))">
         </div>
